--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
     <!-- Tarjetas vacías manteniendo estructura -->
     <div class="card">
       <h2>Actividad 5</h2>
-      <p>Pendiente de publicación</p>
-      <!-- <a href="https://mariiococa.github.io/2AsirAFH2526/trabajos/index.html"><button>Ver proyecto</button></a> -->
+      <p>Práctica de Conexión remota</p>
+      <a href="https://mariiococa.github.io/2AsirAFH2526/trabajos/Conexion_remota_MCA.pdf"><button>Ver proyecto</button></a>
     </div>
 
     <div class="card">
